# ansible-role-kickstart

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements.yml  tasks.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/tox/: molecule.yml  requirements.yml
tasks/: create.yml  install.yml  main.yml
templates/: kickstart.cfg.j2
vars/: RedHat.yml  Suse.yml  main.yml
