[project]
name = "kickstart"
version = "0.0.0"
description = "Ansible role for generating kickstart files."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["kickstart", "unattended"]
repository = "https://github.com/jomrr/ansible-role-kickstart"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
